#14 #23 #16 Endret litt css og lagt inn slik at lyden stopper å spille om man bytter kategori eller tab

--- a/pro2/src/components/Gallery/Gallery.css
+++ b/pro2/src/components/Gallery/Gallery.css
@@ -4,19 +4,20 @@
     margin: 10px;
     width: 80%;
     margin: auto;
-   
-    
+
+
 }
 
-.galleryPic{ 
+.galleryPic{
     grid-row: 1;
     grid-column: 1;
     width: 60%;
     margin: auto;
     margin-top: 20px;
+    padding-top: 20px;
  }
 
-.galleryText{ 
+.galleryText{
     grid-row: 1;
     grid-column: 2;
     margin: 10px;
@@ -35,6 +36,7 @@
     align-self: end;
     justify-content: center;
     width: 70%;
+    padding-top: 20px;
 }
 
 @media only screen and (max-width: 1025px) {
@@ -62,7 +64,7 @@
        grid-row: 3;
        grid-column: 1;
        width: 100%;
-       
+
    }
 
 }
@@ -71,7 +73,7 @@
     body {
         font-size: 15px;
     }
-    
+
     .gridContainer {
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     }
@@ -79,17 +81,17 @@
         grid-row: 1;
         grid-column: 1;
     }
- 
+
     .gallerySound {
         grid-row: 2;
         grid-column: 1;
         width: 100%;
     }
- 
+
     .galleryText {
         grid-row: 3;
         grid-column: 1;
         width: 100%;
-       
+
     }
 }
