--- a/pro2/src/components/Header/Header.css
+++ b/pro2/src/components/Header/Header.css
@@ -6,7 +6,7 @@
 
 .Header > p {
     margin: auto;
-    font-size: 20px;
+    font-size: 30px;
     color: #ffffff;
     padding-top: 10px;
 }
